service.yaml
kind: Service
apiVersion: v1
metadata:
  name: appweb1-service
spec:
  selector:
    app: appweb
  ports:
    - port: 80 # Default port for image
      nodePort: 31000
  type: LoadBalancer
---
kind: Service
apiVersion: v1
metadata:
  name: appweb2-service
spec:
  selector:
    app: appweb
  ports:
    - port: 80 # Default port for image
      nodePort: 31001
  type: LoadBalancer
---
kind: Service
apiVersion: v1
metadata:
  name: appweb-service
spec:
  selector:
    app: appweb
  ports:
    - port: 80 # Default port for image
      nodePort: 31003
  type: LoadBalancer
